# flug-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  RAG_PERFORMANCE_YOUTUBE_CONTENT.md  RAG_TUNING_YOUTUBE_CONTENT.md  README.md  deploy.sh  docker-compose.yml
backend/: .env.example  Dockerfile  IMPLEMENTATION_CHECKLIST.md  POSTGRES_IMPLEMENTATION_SUMMARY.md  POSTGRES_README.md  docker-compose.monitoring.yml  docker-compose.ocr.yml  pyproject.toml  verify_builder.py
backend/.omc/: continuation-count.json
backend/agent/: __init__.py  executor.py  memory.py  memory_factory.py  memory_pg.py  planner.py  router.py  tool_selector.py
backend/api/: __init__.py  main.py  schemas.py
backend/auth/: __init__.py  access_request.py  audit.py  dependencies.py  ethics.py  hr_sync.py  jwt_handler.py  ldap_provider.py  models.py  rate_limiter.py  routes.py  token_blacklist.py  user_store.py
backend/config/: settings.py
backend/data/: audit.db  benchmark_results_all.json  benchmark_results_all_qwen2.5_14b.json  benchmark_results_internal_rules.json  feedback.jsonl  ingest_report_travel_reingest.json  memory.db  parametric_results_speed_20260213_141500.json  tuning_report.html
backend/docs/: MILVUS_SETUP.md  POSTGRES_MIGRATION.md  POSTGRES_QUICKSTART.md  TERMINOLOGY_SERVICE.md  TUNING_REPORT.md
backend/monitoring/: __init__.py  abuse_detector.py  alerting.py  log_handler.py  metrics.py  middleware.py  prometheus.yml
backend/pipeline/: __init__.py  chunker.py  document_monitor.py  ingest.py  loader.py  metadata.py  ocr.py  pii_detector.py  reprocess_queue.py  scheduler.py  sync.py
backend/prompts/: few_shot.yaml  routing_rules.yaml  source_filters.yaml  system.yaml
backend/rag/: __init__.py  access_control.py  agentic.py  (+16 more)
(+342 files in other folders)
